[gd_scene load_steps=7 format=3 uid="uid://dx6ge0atcfweq"]

[ext_resource type="Script" path="res://ui elements/HealthContainer.gd" id="2_8rn2r"]
[ext_resource type="AudioStream" uid="uid://cvrfr42umypbt" path="res://assets/Sounds/665183__el_boss__item-or-material-pickup-pop-1-of-3.wav" id="3_idh1a"]
[ext_resource type="PackedScene" uid="uid://ncyae6xbhh3g" path="res://ui elements/health_rune.tscn" id="3_kvnjv"]
[ext_resource type="AudioStream" uid="uid://labfo8gg616t" path="res://assets/Sounds/665182__el_boss__item-or-material-pickup-pop-2-of-3.wav" id="4_yy0cy"]
[ext_resource type="AudioStream" uid="uid://bb4udkr584fjf" path="res://assets/Sounds/665181__el_boss__item-or-material-pickup-pop-3-of-3.wav" id="5_hyu20"]
[ext_resource type="AudioStream" uid="uid://bvm5i5quwaw6o" path="res://assets/Sounds/515624__mrickey13__playerhurt2.wav" id="6_ap1bu"]

[node name="HP" type="CanvasLayer"]

[node name="HealthContainer" type="HBoxContainer" parent="."]
size_flags_horizontal = 6
theme_override_constants/separation = 5
script = ExtResource("2_8rn2r")

[node name="HealthRune" parent="HealthContainer" instance=ExtResource("3_kvnjv")]
position = Vector2(9, 8)

[node name="HealthRestorePlayer1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_idh1a")
volume_db = 5.0

[node name="HealthRestorePlayer2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_yy0cy")

[node name="HealthRestorePlayer3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_hyu20")

[node name="HealthDrainedPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ap1bu")
